--- a/css/style.css
+++ b/css/style.css
@@ -1,343 +1,327 @@
-*{
-font-family: 'EB Garamond', serif;
-text-align: center;
+/* reset css*/
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {
+  display: block;
 }
-
-ul {
+ol,ul {
   list-style: none;
   margin: 0px;
   padding: 0px;
 }
-
-a{
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
+blockquote,q {
+  quotes: none;
+}
+blockquote:before,blockquote:after,q:before,q:after {
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+a {
   text-decoration: none;
-  color: #df633a;
 }
-
-a:hover {
-  cursor: pointer;
-  cursor: hand;
+.txt-rt {
+  text-align: right;
 }
-
-
-nav #current{
-  border-bottom: 1px solid #74777a;
+.txt-lt {
+  text-align: left;
 }
-
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  width: 500px;
-  margin: 0 auto;
-  text-transform: uppercase;
-  font-size: 20px;
-  list-style: none;
-  padding: 0px;
-}
-
-hr::after {
-  content: "\00A7";
-  display: inline-block;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  transform: rotate(90deg);
-  top: -.6em;
-  padding-bottom: .2em;
-  font-size: 2.5em;
-  line-height: 1;
-  top: -.6em;
-  position: relative;
-  background: #fdfeff;
-}
-
-hr {
-  border-top: 1px dashed #74777a;
-  border-bottom: 1px dashed #74777a;
-  overflow: visible;
-    padding: 0;
-    border: none;
-    border-top-color: currentcolor;
-    border-top-style: none;
-    border-top-width: medium;
-    border-bottom-color: currentcolor;
-    border-bottom-style: none;
-    border-bottom-width: medium;
-    border-top: 1px dashed #74777a;
-  border-bottom: 1px dashed #74777a;
-  height: 4px;
-  margin: 5em auto 0;
-}
-
-.container{
-  width: 700px;
-  margin: 0 auto;
-}
-
-.name {
-  font-size: 54px;
-  margin: 0px;
-  padding: 0px;
-  color: #44474a;
-  font-weight: 200;
-}
-
-.occupation {
-  margin: 0;
-  padding-bottom: 10px;
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
-  font-size: 17px;
-  color:#44474a;
-  text-transform: uppercase;
-
-}
-
-.pagetitle{
-  font-size: 46px;
-  margin: 0px;
-  padding-bottom: 10px;
-  padding-top: 0px;
-  font-weight: 100;
-  color:#44474a;
-}
-
-.intro {
-  font-size: 28px;
-  line-height: 44px;
-  margin: 0px;
-  padding-top: 20px;
-  font-weight: 100;
-  color:#44474a;
-  text-align: left !important;
-}
-
-.about {
-  font-size: 24px;
-  margin: 0px;
-  line-height: 36px;
-  padding-top: 25px;
-  font-weight: 100;
-  color:#44474a;
-  text-align: left !important;
-}
-
-strong {
-  font-weight: 800 !important;
-  font-size: 26px;
-  color: #000;
-}
-
-.companies {
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
-  text-decoration: none;
-  color: #44474a;
-  font-size: 20px;
-  text-transform: uppercase;
-  padding-top: 40px;
-  padding-bottom: 30px;
-}
-
-.clients {
-  text-transform: uppercase;
-  color:#44474a;
-  padding: 0px;
-  margin: 0 auto;
-  display: flex;
-  padding-bottom: 20px;
-  justify-content: space-between;
-}
-
-.certs {
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
-  text-decoration: none;
-  color: #44474a;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding-top: 50px;
-  margin-top: 20px;
-}
-
-.achievements {
-  text-transform: uppercase;
-  color:#44474a;
-  padding: 0px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.details{
-    font-family: 'Libre Franklin', sans-serif !important;
-    color:#44474a;
-    margin-top: 10px;
-    margin-right: 30px;
-    margin-left: 30px;
-    margin-bottom: 20px;
-    font-size: 16px;
-    font-weight: 100px;
-}
-
-.quote {
-  margin: 0px;
-  padding-top: 40px;
-  line-height: 44px;
-  font-family: 'EB Garamond', serif;
-  font-weight: 100;
-  font-size: 24px;
-  color:#44474a;
-}
-.special {
-  font-weight: 50;
-  color: #df633a;
-}
-
-.connect {
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
-  text-decoration: none;
-  color: #44474a;
-  font-size: 20px;
-  text-transform: uppercase;
-  padding: 30px;
-  margin-bottom: 20px;
+.txt-center {
   text-align: center;
 }
-
-.social {
-  text-transform: uppercase;
-  color:#44474a;
-  width: 350px;
-  padding: 0px;
-  margin: 0px auto;
+.float-rt {
+  float: right;
 }
-
-.copyright {
-  font-family: 'Libre Franklin', sans-serif;
-  font-weight: 100;
-  font-size: 16px;
-  color:#44474a;
-  text-transform: uppercase;
-  padding-top: 20px;
-  margin: 0px;
+.float-lt {
+  float: left;
 }
-
-.resume-container{
-  width:800px;
-}
-
-.resume-left{
-  float:left;
-  width: 500px;
-  text-align: left !important;
-  padding-bottom: 30px;
-}
-
-.resume-right{
-  float:right;
-  width: 300px;
-  text-align: left;
-}
-
-.skills-body li{
-  text-align: left !important;
-  padding-left: 0px;
-}
-
-.container-2{
+.clear {
   clear: both;
 }
+.pos-relative {
+  position: relative;
+}
+.pos-absolute {
+  position: absolute;
+}
+.vertical-base {
+  vertical-align: baseline;
+}
+.vertical-top {
+  vertical-align: top;
+}
+nav.vertical ul li {
+  display:block;
+}
+nav.horizontal ul li {
+  display: inline-block;
+}
+img {
+  max-width:100%;
+}
+/* end reset*/
 
-.resume-title{
-  font-family: 'Libre Franklin', sans-serif !important;
-  text-transform: uppercase;
-  font-weight:200;
-  line-height: 40px;
-  text-align: left;
+body {
+    font-family: 'Open Sans', sans-serif;
+    background: url(../img/default.jpg)repeat 0px 0px;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	-ms-background-size: cover;
+    background-size: cover;
 }
 
-.resume-date{
-  text-align: left;
-  font-family: 'Libre Franklin', sans-serif !important;
-  color:#44474a;
-  text-transform: uppercase !important;
-  font-weight:100;
-  font-size: 16px;
+h1 {
+    font-size: 3em;
+    text-align: center;
+    color: #fff;
+    font-weight: 100;
+    margin-bottom: 10px;
 }
 
-.resume-company{
-  text-align: left;
-  font-size: 24px;
-  font-weight:100;
-  line-height: 40px;
-  color:#44474a;
+.container {
+    padding: 2em 0 0;
 }
 
-.resume-body{
-  text-align: left;
-  font-size: 20px;
-  padding-bottom: 30px;
-  color: #44474a;;
-  line-height: 30px;
+.main {
+    width: 25%;
+    margin: 2em auto;
+    background: rgba(0, 0, 0, 0.34);
+    background-size: cover;
+    padding: 2em;
 }
 
-.skills-title{
-  font-family: 'Libre Franklin', sans-serif !important;
-  text-transform: uppercase;
-  font-weight:100;
-  font-size:30px;
-  text-align: left;
-  padding-left: 80px;
+#date {
+    font-size: 1.4em;
+    color: #fff;
+    font-weight: 400;
+    line-height: 1.8em;
 }
 
-.skills-sub{
-  font-family: 'Libre Franklin', sans-serif !important;
-  text-transform: uppercase;
-  font-weight:100;
-  font-size:30px;
-  text-align: left;
-  padding-left: 80px;
+#day {
+    font-size: 1.4em;
+    color: #fff;
+    font-weight: 400;
+    line-height: 1.8em;
 }
 
-.skills-body{
-  font-weight:100;
-  font-size: 20px;
-  text-align: left;
-  padding-left: 80px;
+.form-container{
+  display: flex;
+  position: relative;
+  justify-content: center;
+  margin-bottom:1em;
+  width: 90%;
+  margin:0 auto;
 }
 
-.education-date{
-  text-align: left !important;
-  text-transform: uppercase;
-  padding-left:80px;
-  padding-bottom: 0px;
-  margin: 0px;
+#zip-code {
+color: #fff;
+font-size: 1em;
+background:rgba(0, 0, 0, .5);
+border: 1px rgba(0, 0, 0, 0.34);
+border-radius: 25px;
+padding: 0px 2em;
+width: 35%;
+height: 60px;
+line-height: 74px;
 }
 
-.education-location {
-  text-align: left;
-  padding-left: 80px;
-  text-align: left;
-  padding-top: 0px;
-  font-size: 24px;
-  font-weight: 100;
-  line-height: 40px;
-  color:#44474a;
-  margin-top: 10px;
+#search-btn{
+	height:40px;
+	width:40px;
+	border:0;
+	cursor:pointer;
+	zoom:1;
+	filter:alpha(opacity=85);
+	opacity:0.85;
+	background:transparent url(../img/search-icon.png) top left no-repeat;
 }
 
-.download {
-  background-color: #df633a;
-  color: #FFFFFF !important;
-  border-radius: 15px;
-  height: 30px;
-  margin-left: 20%;
-  padding: 20px 20px;
-  text-transform: uppercase;
-  font-weight: 800px;
+#search-btn:hover{
+	filter:alpha(opacity=100);
+	opacity:1;
+}
+
+.text-container {
+    text-align: center;
+}
+
+.min-max-container{
+  display: flex;
+  justify-content: center;
+}
+
+.text-container h3 {
+    font-size: 2em;
+    color: #fff;
+}
+
+.text-container h5 {
+    font-size: 0.9em;
+    color: #ececec;
+    font-weight: 100;
+    margin-top: 0.5em;
+}
+
+.text-container h2 {
+    font-size: 8em;
+    font-weight: 900;
+    color: rgba(255, 215, 1, 0.59);
+}
+
+.text-container span {
+    font-weight: 200;
+    font-size: 0.6em;
+    vertical-align: text-top;
+}
+
+.text-container h4 {
+    font-size: 2em;
+    color: #fff;
+    letter-spacing: 3px;
+}
+
+.text-container h6 {
+    font-size: .9em;
+    color: #fff;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-top: 1em;
+}
+
+.sliding-icons {
+    width: 70%;
+    margin: 3em auto 0;
+}
+
+.item.agile-item {
+    text-align: center;
+}
+
+.agile-item h6 {
+    font-size: 0.9em;
+    color: #fff;
+    font-weight: 300;
+}
+
+/* responsive-design */
+@media(max-width: 4000px){
+.main {
+    width: 27%;
+ }
+}
+
+@media(max-width: 1280px){
+.main {
+    width: 31%;
+ }
+}
+
+@media(max-width: 1080px){
+.main {
+    width: 35%;
+ }
+}
+
+@media(max-width: 991px){
+.container {
+    padding: 2em 0 0;
+ }
+h1 {
+    font-size: 2.6em;
+ }
+.text-container h2 {
+    font-size: 7em;
+ }
+.main {
+    width: 40%;
+ }
+}
+
+@media(max-width: 768px){
+.sliding-icons {
+    margin: 2em auto 0;
+ }
+
+}
+@media(max-width: 667px){
+.main {
+    width: 50%;
+ }
+}
+
+@media(max-width: 600px){
+h1 {
+    font-size: 2.4em;
+ }
+.text-container h6 {
+    margin-top: 0.5em;
+ }
+.container {
+    padding: 1.5em 0 0;
+ }
+}
+
+@media(max-width: 480px){
+h1 {
+    font-size: 2em;
+ }
+.main {
+    width: 57%;
+ }
+.date {
+    font-size: 1.2em;
+ }
+.sliding-icons{
+    width: 75%;
+ }
+}
+
+@media(max-width: 414px){
+.text-container h2 {
+    font-size: 6em;
+ }
+.text-container h4 {
+    font-size: 1.8em;
+    letter-spacing: 1px;
+ }
+.sliding-icons {
+    width: 85%;
+ }
+.main {
+    padding: 1.5em;
+ }
+}
+
+@media(max-width: 384px){
+h1 {
+    font-size: 1.8em;
+}
+.main{
+    width: 70%;
+ }
+}
+
+@media(max-width:320px){
+h1 {
+    font-size: 1.5em;
+ }
+.main {
+    width: 75%;
+    padding: 1em;
+ }
+.text-container h2 {
+    font-size: 5em;
+ }
+.text-container h4 {
+    font-size: 1.4em;
+ }
+.text-container h6 {
+    letter-spacing: 0px;
+ }
+.sliding-icons {
+    width: 90%;
+ }
 }
