--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 3.2em;
     text-align: center;
     color: #fff;
     font-weight: 100;
@@ -101,7 +101,7 @@ h1 {
 }
 
 #day {
-    font-size: 1.4em;
+    font-size: 1.6em;
     color: #fff;
     font-weight: 400;
     line-height: 1.8em;
@@ -178,29 +178,28 @@ line-height: 74px;
 }
 
 .text-container h4 {
-    font-size: 2em;
+    font-size: 2.5em;
     color: #fff;
     letter-spacing: 3px;
 }
 
 .text-container h6 {
-    font-size: .9em;
+    font-size: 1.1em;
     color: #fff;
     font-weight: 300;
     letter-spacing: 1px;
     margin-top: 1em;
 }
 
-.sliding-icons {
-    width: 70%;
-    margin: 3em auto 0;
+.weather-icon {
+    margin: 1em auto 0;
 }
 
-.item.agile-item {
+.status{
     text-align: center;
 }
 
-.agile-item h6 {
+.status h6 {
     font-size: 0.9em;
     color: #fff;
     font-weight: 300;
@@ -241,7 +240,7 @@ h1 {
 }
 
 @media(max-width: 768px){
-.sliding-icons {
+.weather-icon  {
     margin: 2em auto 0;
  }
 
@@ -253,29 +252,29 @@ h1 {
 }
 
 @media(max-width: 600px){
-h1 {
-    font-size: 2.4em;
- }
-.text-container h6 {
-    margin-top: 0.5em;
- }
-.container {
-    padding: 1.5em 0 0;
+  h1 {
+      font-size: 2.4em;
+   }
+  .text-container h6 {
+      margin-top: 0.5em;
+   }
+  .container {
+      padding: 1.5em 0 0;
  }
 }
 
 @media(max-width: 480px){
-h1 {
-    font-size: 2em;
- }
-.main {
-    width: 57%;
- }
-.date {
-    font-size: 1.2em;
- }
-.sliding-icons{
-    width: 75%;
+  h1 {
+      font-size: 2em;
+   }
+  .main {
+      width: 57%;
+   }
+  .date {
+      font-size: 1.2em;
+   }
+  .weather-icon {
+      width: 75%;
  }
 }
 
@@ -296,32 +295,32 @@ h1 {
 }
 
 @media(max-width: 384px){
-h1 {
-    font-size: 1.8em;
-}
-.main{
-    width: 70%;
+  h1 {
+      font-size: 1.8em;
+  }
+  .main{
+      width: 70%;
  }
 }
 
 @media(max-width:320px){
-h1 {
-    font-size: 1.5em;
- }
-.main {
-    width: 75%;
-    padding: 1em;
- }
-.text-container h2 {
-    font-size: 5em;
- }
-.text-container h4 {
-    font-size: 1.4em;
- }
-.text-container h6 {
-    letter-spacing: 0px;
- }
-.sliding-icons {
-    width: 90%;
+  h1 {
+      font-size: 1.5em;
+   }
+  .main {
+      width: 75%;
+      padding: 1em;
+   }
+  .text-container h2 {
+      font-size: 5em;
+   }
+  .text-container h4 {
+      font-size: 1.4em;
+   }
+  .text-container h6 {
+      letter-spacing: 0px;
+   }
+  .weather-icon {
+      width: 70%;
  }
 }
