--- a/css/style.css
+++ b/css/style.css
@@ -118,15 +118,16 @@ h1 {
 
 #zip-code {
 color: #fff;
-font-size: 1em;
+font-size: 2em;
 background:rgba(0, 0, 0, .5);
 border: 1px rgba(0, 0, 0, 0.34);
 border-radius: 25px;
 padding: 0px 2em;
+margin: 0;
 width: 35%;
 height: 60px;
 line-height: 60px;
-vertical-align: baseline;
+vertical-align: middle;
 }
 
 #search-btn{
