--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ vertical-align: middle;
 	zoom:1;
 	filter:alpha(opacity=85);
 	opacity:0.85;
-	background:transparent url(../img/search-icon.png) top left no-repeat;
+	background:transparent url(../img/search-icon.png) center center no-repeat;
   vertical-align: middle;
   margin: 0;
 }
