--- a/css/style.css
+++ b/css/style.css
@@ -333,9 +333,9 @@ h1 {
     margin: 0px;
     padding: 0px;
    }
-   #search-btn{
+   /* #search-btn{
      display:none;
-   }
+   } */
 .text-container h2 {
     font-size: 6em;
  }
